fitur 10, benerin bonus done

--- a/tugas1/src/main/resources/templates/addPegawaiSubmit.html
+++ b/tugas1/src/main/resources/templates/addPegawaiSubmit.html
@@ -13,7 +13,7 @@
 		
 		<div class="alert alert-success" role="alert">
 		  <h4 class="alert-heading">Sukses!</h4>
-		  	<p>Pegawai Berhasil Ditambahkan.</p>
+		  	<p th:text="'Pegawai dengan NIP ' + ${pegawai.nip} + ' Berhasil Ditambahkan'"></p>
 		  <hr>
 		</div>
 	</body>
