--- a/tugas1/src/main/resources/templates/viewAllJabatan.html
+++ b/tugas1/src/main/resources/templates/viewAllJabatan.html
@@ -28,7 +28,7 @@
 						<td class="text-center" th:text="${iterationStatus.count}"></td>
 						<td th:text="${jabatan.nama}"></td>
 						<td th:text="${jabatan.deskripsi}"></td>
-						<td th:text="${jabatan.gaji_pokok}"></td>
+						<td th:text="'Rp. ' + ${jabatan.gaji_pokok}"></td>
 					</tr>
 				</tbody>
 			</table>
