--- a/tugas1/src/main/resources/templates/addJabatan.html
+++ b/tugas1/src/main/resources/templates/addJabatan.html
@@ -12,7 +12,7 @@
 		<div class="row">
 			<div class="col-md-8">
 				<div class="card">
-					<div class="card-header">
+					<div class="card-header" align="center">
 						<h3>Tambah Jabatan</h3>
 					</div>
 					<div class="card-body">
@@ -37,10 +37,10 @@
 						      <input required type="text" class="form-control" name="gaji_pokok" id="gaji_pokok" placeholder="Masukan gaji pokok" value="5000000">
 						    </div>
 						  </div>
-						  
-						  <div class="form-group row">
-						    <div class="col-sm-8">
-						      <button type="submit" class="btn btn-primary">Tambah</button>
+						  <br>
+						  <div class="form-group row" align="center">
+						    <div class="col-sm-12">
+						      <button type="submit" class="btn btn-success"><i class="fas fa-plus-circle"></i> Tambah</button>
 						    </div>
 						  </div>
 						</form>
