--- a/tugas1/src/main/resources/templates/fragments/fragment.html
+++ b/tugas1/src/main/resources/templates/fragments/fragment.html
@@ -6,34 +6,36 @@
 		<head th:fragment="css">
 			<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 			<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css"/>
+			<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
 		</head>
 		
 		<head th:fragment="js">
 			<script th:src="@{/js/bootstrap.min.js}"></script>
 			<script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-        <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
+        	<script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
+        	<script defer src="https://use.fontawesome.com/releases/v5.4.2/js/all.js" integrity="sha384-wp96dIgDl5BLlOXb4VMinXPNiB32VYBSoXOoiARzSTXY+tsK8yDTYfvdTyqzdGGN" crossorigin="anonymous"></script>
 		</head>	
 	</head>
 	
 	<body>
 		<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<a class="navbar-brand" th:href="@{/}">SIPEG</a>
+			<a class="navbar-brand" th:href="@{/}"><i class="fas fa-users"></i> SIPEG</a>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="nav nav-pills" id="navbarSupportedContent">
 					<li class="nav-item active">
-						<a class="nav-link" th:href="@{/}">Home</a>
+						<a class="nav-link" th:href="@{/}"><i class="fas fa-home"></i> Home</a>
 					</li>
 					<li class="nav-item active">
-						<a class="nav-link" th:href="@{/pegawai/tambah}">Tambah Pegawai</a>
+						<a class="nav-link" th:href="@{/pegawai/tambah}"><i class="fas fa-plus"></i> Tambah Pegawai</a>
 					</li>
 					<li class="nav-item active">
-						<a class="nav-link" th:href="@{/jabatan/tambah}">Tambah Jabatan</a>
+						<a class="nav-link" th:href="@{/jabatan/tambah}"><i class="fas fa-plus"></i> Tambah Jabatan</a>
 					</li>
 					<li class="nav-item active">
-						<a class="nav-link" th:href="@{/pegawai/cari}">Cari Pegawai</a>
+						<a class="nav-link" th:href="@{/pegawai/cari}"><i class="fas fa-search"></i> Cari Pegawai</a>
 					</li>
 					<li class="nav-item active">
-						<a class="nav-link" th:href="@{/jabatan/viewAll}">Lihat Semua Jabatan</a>
+						<a class="nav-link" th:href="@{/jabatan/viewAll}"><i class="fas fa-list-ul"></i> Lihat Semua Jabatan</a>
 					</li>
 				</ul>
 			</div>
