--- a/tugas1/src/main/resources/templates/updateJabatan.html
+++ b/tugas1/src/main/resources/templates/updateJabatan.html
@@ -12,7 +12,7 @@
 		<div class="row">
 			<div class="col-md-8">
 				<div class="card">
-					<div class="card-header">
+					<div class="card-header" align="center">
 						<h3>Ubah Jabatan</h3>
 					</div>
 					<div class="card-body">
@@ -38,10 +38,10 @@
 						      <input required type="text" class="form-control" name="gaji_pokok" th:value="${jabatan.gaji_pokok}" placeholder="Masukan gaji pokok" value="5000000">
 						    </div>
 						  </div>
-						  
-						  <div class="form-group row">
-						    <div class="col-sm-8">
-						      <button type="submit" class="btn btn-primary">Simpan</button>
+						  <br>
+						  <div class="form-group row" align="center">
+						    <div class="col-sm-10">
+						      <button type="submit" class="btn btn-success"><i class="fas fa-save"></i> Simpan</button>
 						    </div>
 						  </div>
 						</form>
