--- a/tugas1/src/main/resources/templates/viewPegawai.html
+++ b/tugas1/src/main/resources/templates/viewPegawai.html
@@ -9,10 +9,11 @@
 
 	<body>
 		<nav th:replace="fragments/fragment :: navbar"></nav>
+		
 		<div class="row">
 			<div class="col-md-8">
 				<div class="card">
-					<div class="card-header">
+					<div class="card-header" align="center">
 						<h3>Lihat Data Pegawai - [[${pegawai.nip}]]</h3>
 					</div>
 					<div class="card-body">
@@ -62,11 +63,18 @@
 						  <div class="form-group row">
 						    <label for="gaji_pokok" class="col-sm-2 col-form-label">Gaji</label>
 						    <div class="col-sm-8">
-						      <input required type="text" class="form-control" name="gaji_pokok" th:value="${gaji}" disabled>
+						      <input required type="text" class="form-control" name="gaji_pokok" th:value="'Rp. ' + ${gaji}" disabled>
 						    </div>
 						  </div>
-						  
 						</form>
+						
+						<div class="form-group row" align="center">
+						    <div class="col-md-10">
+							    <form th:action="@{/}" method="GET">
+							    	<button type="submit" class="btn btn-secondary"><i class="fas fa-arrow-circle-left"></i> Kembali</button>
+							    </form>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
